<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_name" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="text" />
            <TextView
                android:id="@+id/date_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_date" />

            <EditText
                android:id="@+id/date_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />
            <TextView
                android:id="@+id/neck_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_neck" />

            <EditText
                android:id="@+id/neck_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/bust_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bust" />

            <EditText
                android:id="@+id/bust_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/chest_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/chest" />

            <EditText
                android:id="@+id/chest_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/waist_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/waist" />

            <EditText
                android:id="@+id/waist_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/hip_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hip" />

            <EditText
                android:id="@+id/hip_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/inseam_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/inseam" />

            <EditText
                android:id="@+id/inseam_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:inputType="numberDecimal" />
            <TextView
                android:id="@+id/comment_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/comment_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:inputType="text" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>